--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "5.3.*",
         "barryvdh/laravel-elfinder": "^0.3.8",
-        "magyarjeti/laravel-lipsum": "^1.1"
+        "magyarjeti/laravel-lipsum": "^1.1",
+        "twbs/bootstrap": "^3.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
